# aruba-rs

./: Cargo.toml  LICENSE  README.md
aruba/: Cargo.toml
aruba/src/: lib.rs
aruba/src/api/: commands.rs  mod.rs  path_or_temp.rs  text.rs
aruba/src/api/command_run/: existing_or_from_prefix.rs  mod.rs  path_or_temp.rs  process_state.rs
aruba/src/assertions/: mod.rs
aruba/src/cucumber/: aruba_world.rs  mod.rs
aruba/src/cucumber/step_custom_parameters/: in_dir_parameter.rs  maybe_successfully_parameter.rs  mod.rs
aruba/src/cucumber/step_definitions/: command_steps.rs
aruba/src/cucumber_parameters/: maybe_not.rs  mod.rs
aruba/src/steps/: command_line_parameter.rs  command_steps.rs  maybe_not_parameter.rs  mod.rs  output_channel_parameter.rs  world.rs
aruba/src/steps/cucumber_custom_parameters/: command_line_parameter.rs  maybe_not_parameter.rs  mod.rs  output_channel_parameter.rs
aruba/src/steps/parameters/: maybe_not.rs  mod.rs
aruba/src/steps/step_definitions/: mod.rs
examples/aruba_clap_hello_world/: Cargo.toml  README.md
examples/aruba_clap_hello_world/tests/: cucumber_aruba_tests.rs
examples/aruba_clap_hello_world/tests/features/: greet.feature  help.feature  release_build.feature
examples/aruba_hello_world/: Cargo.toml
examples/aruba_hello_world/src/: main.rs
examples/aruba_hello_world/tests/: cucumber_aruba_example.rs
examples/aruba_hello_world/tests/features/: help.feature
