[package]
name = "aruba_clap_hello_world"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
aruba = { path = "../../aruba" }
cucumber = "0.17"
futures = "0.3"

[[test]]
name = "cucumber_aruba_tests"   # see tests/cucumber_aruba_tests.rs
harness = false                 # allow Cucumber to print output instead of libtest
